--- a/LandingPage/Styles/associations-main-style.css
+++ b/LandingPage/Styles/associations-main-style.css
@@ -16,12 +16,12 @@
 }
 
 html{
-    height: 100%;
-    overflow: hidden;
+    height: 100vh;
+    overflow-y: hidden;
 }
 
 .mainPage{
-    height: 90%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     box-shadow: inset 0px -20px 20px rgba(0, 0, 0, 0.3);
@@ -30,10 +30,8 @@ html{
     background-repeat: no-repeat;
     background-size: cover;
     color: #292929;
-    overflow-y: auto;
-    scrollbar-width: thin;
+    
 }
-
 .title-container h1{
     font-family: "Oswald";
     margin: 0;
@@ -53,10 +51,13 @@ html{
 
 .orgList{
     padding: 1rem;
+    padding-bottom: 5rem;
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 5px;
     justify-content: center;
+    scrollbar-width: thin;
+    overflow-y: auto;
 }
 
 .itemList{
