--- a/LandingPage/Styles/general-style.css
+++ b/LandingPage/Styles/general-style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color: #232323;
+    background-color: #eee;
     margin: 0;
     padding-top: 3.6rem;
     font-family: "ROBOTO";
