Final-Retouch User Registration Update
-Added Description Input
-Added Course/Strand Input

--- a/User_Registration/Styles/form-style.css
+++ b/User_Registration/Styles/form-style.css
@@ -85,6 +85,15 @@ a:visited, a:active, a:hover, a{
     font-size: 1rem; 
     border: solid 1px transparent;
     border-radius: 5px;  
+    resize: none;
+}
+
+.normalTextArea{
+    height: 6rem;
+}
+
+.normalTextArea:focus{
+    outline: none;
 }
 
 .inputContainer p{
