--- a/AdminPage/Styles/mainStyle/calendar-style.css
+++ b/AdminPage/Styles/mainStyle/calendar-style.css
@@ -1,4 +1,4 @@
-.calendar{
+/* .calendar{
     width: 80%;
     height: auto;
     display: flex;
@@ -83,4 +83,4 @@
 
 .inactive2{
     color: rgb(95, 95, 95);
-}
+} */
