--- a/AdminPage/Styles/mainStyle/general-style.css
+++ b/AdminPage/Styles/mainStyle/general-style.css
@@ -3,7 +3,7 @@
 .ajs-message.ajs-custom { color: #fff;  background-color:rgb(219, 54, 54);  border-color: rgb(219, 54, 54); }
 
 body{
-    background-color: #faffed;
+    background-color: #ececec;
     margin: 0;
     font-family: "ROBOTO";
     color: #232323;
