--- a/AdminPage/Styles/association-main-style.css
+++ b/AdminPage/Styles/association-main-style.css
@@ -3,8 +3,8 @@ main{
 }
 
 .main-header{
-    background-color: #1C1C1C;
-    border: solid 1px #131314; 
+    background-color: transparent;
+    border: solid 2px #232323; 
 }
 
 .main-header{
@@ -18,13 +18,12 @@ main{
 }
 
 .main-header input{
-    background-color: #171717;
-    color: #b9b9b9;
+    background-color: transparent;
     padding: 0.4rem 0.9rem;
     font-size: 1rem;
-    border: none;
+    border: solid 2px #232323;
     width: 100%;
-    border-radius: 1rem 0rem 0rem 1rem;
+    border-radius: 1rem;
 }
 
 .searchbar{
@@ -40,27 +39,30 @@ main{
 }
 
 .searchButton{
-    background-color: #171717;
+    background-color: transparent;
+    border: solid 2px #232323;
     color: #b9b9b9;
-    padding: 0.4rem 0.5rem;
+    padding: 0.39rem 0.5rem;
     width: 1.2rem;
-    border-radius: 0rem 1rem 1rem 0rem;
+    border-radius: 50%;
     -webkit-user-drag: none;
     user-select: none;
 }
 
 .main-header button{
-    background-color: #171717;
-    color: #b9b9b9;
+    background-color: transparent;
+    color: #232323;
     padding: 0.6rem 1rem;
     border: none;
     border-radius: 1rem;
-    outline: solid 1px #b9b9b9;
+    outline: solid 2px #232323;
+    font-weight: 600;
     transition: background-color 0.15s;
 }
 
 .main-header button:hover{
     background-color: #272525;
+    color: #eee;
     outline-width: 2px;
 }
 
@@ -72,13 +74,17 @@ main{
 }
 
 .associationItem{
-    background-color: #1C1C1C;
-    border: solid 1px #131314; 
+    background-color: transparent;
+    border: solid 2px #292929;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    color: #232323;
     padding: 0.5rem 0.5rem;
     border-radius: 0.5rem;
     display: flex;
     transition: background-color 0.25s;
     cursor: pointer;
+    transition: transform 0.25s, box-shadow 0.20s;
 }
 
 .associationItemDeactivated{
@@ -90,10 +96,13 @@ main{
     display: flex;
     transition: background-color 0.25s;
     cursor: pointer;
+    transition: transform 0.25s, box-shadow 0.20s;
 }
 
 .associationItem:hover{
-    background-color: #2c2c31;
+    /* background-color: #2c2c31; */
+    transform: translate(-2px, -3px);
+    box-shadow: 3px 3px 4px #000000cc;
 }
 
 .list--logo{
@@ -126,10 +135,11 @@ main{
 }
 
 .association--type{
-    background-color: #151515;
+    /* background-color: #faf0f0; */
     color:#b9b9b9;
     font-size: 0.9rem;
-    border: solid 1px;
+    font-weight: 500;
+    border: solid 2px;
     border-radius: 1rem;
     padding: 0.09rem 0.6rem;
 }
@@ -151,7 +161,8 @@ form{
     transform: translateY(30%);
     transform: translateX(-50%);
     /* Style */
-    background-color: #171717;
+    background-color: #003365;
+    color: #eee;
     position: fixed;
     border-radius: 1rem;
     display: flex;
