--- a/AdminPage/Styles/mainStyle/header-style.css
+++ b/AdminPage/Styles/mainStyle/header-style.css
@@ -66,7 +66,8 @@ header nav{
 }
 
 .selected:hover{
-    background-color: #214569;
+    color: #fecc66;
+    background-color: #00264d;
 }
 
 .profile img{
